[gd_scene load_steps=5 format=3 uid="uid://chai6frr4uerh"]

[ext_resource type="Script" uid="uid://btkpbf5rkt712" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Theme" uid="uid://bk5p2x0n1xjfp" path="res://scenes/main_menu.tres" id="1_l6cm7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.1504, 0.21432, 0.47, 0.47451)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ekxnf"]
color = Color(1, 1, 1, 1)
thickness = 3

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -413.5
offset_top = -205.0
offset_right = 413.5
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ekxnf")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -388.0
offset_top = -180.0
offset_right = 388.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level1Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_l6cm7")
action_mode = 0
text = "Level 1"

[node name="Level2Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_l6cm7")
action_mode = 0
text = "Level 2"

[node name="Level3Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_l6cm7")
action_mode = 0
text = "Level 3"

[node name="Level4Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_l6cm7")
action_mode = 0
text = "Boss Fight"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxLine_ekxnf")

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_l6cm7")
action_mode = 0
text = "Quit"

[connection signal="mouse_entered" from="Panel/VBoxContainer/Level1Button" to="." method="_on_level_1_button_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Level4Button" to="." method="_on_level_4_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
